samples/_failures_safe/1761462175_fdae99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff34a522.c: In function ‘main’:
./samples/SAFE/__tmp_ff34a522.c:168:49: error: expected ‘)’ at end of input
  168 |                 if (matrix_multiply(&mat1, &mat2
      |                                    ~            ^
      |                                                 )
./samples/SAFE/__tmp_ff34a522.c:168:21: error: too few arguments to function ‘matrix_multiply’
  168 |                 if (matrix_multiply(&mat1, &mat2
      |                     ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ff34a522.c:71:5: note: declared here
   71 | int matrix_multiply(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ff34a522.c:168:17: error: expected declaration or statement at end of input
  168 |                 if (matrix_multiply(&mat1, &mat2
      |                 ^~
./samples/SAFE/__tmp_ff34a522.c:168:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff34a522.c:168:17: error: expected declaration or statement at end of input
